# back-end/src/models/client.model.js
@@ -11,7 +11,7 @@ const schema = new mongoose.Schema(
       type: String,
       trim: true,
       required: "Whats é essencial para cadastro.",
-      match:[/^\+?\d{10,15}$/, "Número de telefone inválido."]
+      match: [/^\+?\d{10,15}$/, "Número de telefone inválido."],
     },
     address: {
       street: {
@@ -23,21 +23,31 @@ const schema = new mongoose.Schema(
       eircode: {
         type: String,
         minlength: [7, "Se não foi colocado espaço o mínimo são 7 caracteres."],
-        maxlength: [8, "Se foi colocado espaço o máximo são 8 caracteres."]
-      }
+        maxlength: [8, "Se foi colocado espaço o máximo são 8 caracteres."],
+      },
     },
     typeOfWork: {
       type: String,
       required: "Tipo de exercicio é essencial",
-      enum:["Serviço de limpeza", "Paisagismo e jardinagem", "Pintura"]
+      enum: ["Serviço de limpeza", "Paisagismo e jardinagem", "Pintura"],
+    },
+    dateOfService: {
+      type: Date,
+      required: "Coloque a data que deseja o serviço.",
+      validate: {
+       validator: function(date) {
+          return date >= Date.now();
+        },
+      },
+      message: "A data deve ser no futuro.",
     },
     howFindCompany: {
       type: String,
       required: ".......",
-      enum:["Facebook", "Instagram", "Google", "Indicação"]
+      enum: ["Facebook", "Instagram", "Google", "Indicação"],
     },
-    indicatorName:{
-      type:String
+    indicatorName: {
+      type: String,
     },
     particularities: {
       type: String,
